// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Mode Facet Test With Adaptive Layout should get correct col layout col hierarchy coordinate with adaptive layout 1`] = `
Array [
  Object {
    "height": 30,
    "width": 119.8,
    "x": 0,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 119.8,
    "x": 119.8,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 119.8,
    "x": 239.6,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 119.8,
    "x": 359.4,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 119.8,
    "x": 479.2,
    "y": 0,
  },
]
`;

exports[`Table Mode Facet Test With Adaptive Layout should get correct col layout with seriesNumber col hierarchy coordinate with adaptive layout with seriesNumber 1`] = `
Array [
  Object {
    "height": 30,
    "width": 103.8,
    "x": 80,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 103.8,
    "x": 183.8,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 103.8,
    "x": 287.6,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 103.8,
    "x": 391.40000000000003,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 103.8,
    "x": 495.20000000000005,
    "y": 0,
  },
]
`;

exports[`Table Mode Facet Test With Custom Row Height should get correct rowOffsets when custom row height is set 1`] = `
Array [
  0,
  30,
  60,
  360,
  560,
  590,
  620,
  650,
  680,
  710,
  740,
  800,
  830,
  860,
  890,
  920,
  940,
  970,
  1000,
  1030,
  1060,
  1090,
  1120,
  1150,
  1180,
  1210,
  1240,
  1270,
  1300,
  1330,
  1360,
  1390,
  1420,
]
`;

exports[`Table Mode Facet With Column Grouping Frozen Test should get correct frozen group positions 1`] = `
Object {
  "frozenCol": Object {
    "range": Array [
      0,
      0,
    ],
    "width": 199.66,
    "x": 0,
  },
  "frozenRow": Object {
    "height": 60,
    "range": Array [
      0,
      1,
    ],
    "y": 0,
  },
  "frozenTrailingCol": Object {
    "range": Array [
      2,
      2,
    ],
    "width": 199.66,
    "x": 399.32,
  },
  "frozenTrailingRow": Object {
    "height": 60,
    "range": Array [
      30,
      31,
    ],
    "y": 900,
  },
}
`;

exports[`Table Mode Facet With Column Grouping Frozen Test should get correct indexes with row height gt canvas height 1`] = `
Object {
  "center": Array [
    1,
    1,
    2,
    0,
  ],
  "frozenCol": Array [
    0,
    0,
    2,
    0,
  ],
  "frozenRow": Array [
    1,
    1,
    0,
    1,
  ],
  "frozenTrailingCol": Array [
    2,
    2,
    2,
    0,
  ],
  "frozenTrailingRow": Array [
    1,
    1,
    30,
    31,
  ],
}
`;

exports[`Table Mode Facet With Frozen Test should get correct frozen group positions 1`] = `
Object {
  "frozenCol": Object {
    "range": Array [
      0,
      1,
    ],
    "width": 239.6,
    "x": 0,
  },
  "frozenRow": Object {
    "height": 60,
    "range": Array [
      0,
      1,
    ],
    "y": 0,
  },
  "frozenTrailingCol": Object {
    "range": Array [
      3,
      4,
    ],
    "width": 239.60000000000002,
    "x": 359.4,
  },
  "frozenTrailingRow": Object {
    "height": 60,
    "range": Array [
      30,
      31,
    ],
    "y": 900,
  },
}
`;
